add record controllers
